# fann

./: .cdtproject  .project  AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  README.CMake  TODO  aclocal.m4  autogen.sh  config.in  configure  configure.in  fann.prj  fann.spec.in  fann2.kdevelop  fann2.kdevelop.filelist  libtool
Borland Developer Studio/: all.bdsgroup  all.bdsgroup.local  cascade_train.bdsproj  libfann.bdsproj  momentums.bdsproj  mushroom.bdsproj  robot.bdsproj  simple_test.bdsproj  simple_train.bdsproj  steepness_train.bdsproj  xor_test.bdsproj  xor_train.bdsproj
Delphi/: README.txt
Delphi/Docs/: DelphiCodeToDoc.css  DelphiFANN_FannNetwork_TFannNetwork_Build.htm  DelphiFANN_FannNetwork_TFannNetwork_ConnectionRate.htm  DelphiFANN_FannNetwork_TFannNetwork_Create.htm  DelphiFANN_FannNetwork_TFannNetwork_Destroy.htm  DelphiFANN_FannNetwork_TFannNetwork_GetMSE.htm  DelphiFANN_FannNetwork_TFannNetwork_Layers.htm  DelphiFANN_FannNetwork_TFannNetwork_LearningRate.htm  DelphiFANN_FannNetwork_TFannNetwork_LoadFromFile.htm  DelphiFANN_FannNetwork_TFannNetwork_Run.htm  DelphiFANN_FannNetwork_TFannNetwork_SaveToFile.htm  DelphiFANN_FannNetwork_TFannNetwork_Train.htm  DelphiFANN_FannNetwork_TFannNetwork_TrainOnFile.htm  index.htm
Delphi/Files/: FannNetwork.pas  fann.pas
Delphi/Samples/Xor/: XorSample.dfm  XorSample.pas
Delphi/Samples/XorConsole/: XorConsole.dpr
MSVC++/: libfann.dsp  simple_train.dsp  steepness_train.dsp  xor_test.dsp  xor_train.dsp
MicrosoftVisualC++6.0/: README.txt
benchmarks/: .cvsignore  Makefile  README  benchdata.h  benchmark.sh  gnuplot  gnuplot.pl  parity.c  performance.cc  quality.cc  quality_fixed.c  shuffle.c  summary.txt  summary2tex.pl  two-spirals.c
benchmarks/datasets/: building.test  building.train  cancer.test  cancer.train  card.test  card.train  diabetes.test  diabetes.train  flare.test  flare.train  gene.test  gene.train  glass.test  glass.train  heart.test  heart.train  horse.test  horse.train  mushroom.train  parity13.test  parity13.train  parity8.test  parity8.train  pumadyn-32fm.test  pumadyn-32fm.train  pumadyn-32nh.test  pumadyn-32nh.train  robot.test  robot.train  soybean.test  soybean.train  thyroid.test  thyroid.train  two-spiral.test  two-spiral.train
debian/: changelog  control  copyright  docs  files  libfann1-dev.doc-base  libfann1-dev.examples  libfann1-py.dirs  libfann2-py.dirs  libfann2-py.files  rules
doc/: Makefile  fann.xml  fann_doc_complete_1.0.djvu  fann_doc_complete_1.0.ps  index.html  installation.txt  intro.html  menu.html  personal.dict  search.php  style.css
examples/: Makefile  cascade_train.c  momentums.c  mushroom.c  robot.c  scaling_test.c  scaling_train.c  simple_test.c  simple_train.c  steepness_train.c  xor.data  xor_sample.cpp  xor_test.c  xor_train.c
python/: INSTALL  Makefile  README  fann.i  fann.py  fann_helper.c  libfann.i  libfann.py  makefile.gnu  makefile.msvc  setup.py  setup_unix.py  simple_train.py
python/examples/: fann_trainer.py  mushroom.py  simple_train.py
python/pyfann/: Makefile  fann.py  fann_cpp_subclass.h  pyfann.i
src/: Makefile  Makefile.am  Makefile.in  doublefann.c  fann.c  fann_cascade.c  fann_error.c  fann_extensions.c  fann_internal.c  fann_io.c  fann_options.c  fann_train.c  fann_train_data.c  fixedfann.c  floatfann.c  xor_fixed.data  xor_float.net
src/datasets/: cancer.test  card.test  diabetes.test  heart.test  heart.train  horse.train  mushroom.test  thyroid.train
src/include/: Makefile.am  Makefile.in  compat_time.h  config.h  doublefann.h  doublefann.h~  fann.h  fann.h~  fann_activation.h  fann_cascade.h  fann_cpp.h  fann_data.h  fann_data.h~  fann_errno.h  fann_error.h  fann_extensions.h  fann_internal.h  fann_internal.h~  fann_io.h  fann_train.h  fixedfann.h  fixedfann.h~  floatfann.h  floatfann.h~
src/test/: ctimer.h  performance.cc  quality.cc  quality_fixed.c  simple_test_float  simple_test_float.c  simple_train.c  steepness_train.c  xor_test.c  xor_train.c
vs.net2003/: all.ncb  libfann.vcproj  simple_test.vcproj  simple_train.vcproj  steepness_train.vcproj  xor_test.vcproj  xor_train.vcproj
win32_dll/: makefile  readme.txt  win32.ncb  windll.vcproj
